# evidence-ai

./: .gitignore  README.md  build_comparison.py  download_pdfs_local.py  environment.yml  extract_pipeline.py  fetch_pdfs.py  harvest.py  pyproject.toml  sync_to_hf.py  to_csv.py  upload_when_done.sh
configs/: demo_local.yaml  full_run.yaml  hf_text_demo.yaml  ml_demo_moe.yaml  ml_demo_q32.yaml  pipeline.yaml  test_10.yaml  test_set.yaml
extraction/: __init__.py  audit.py  citations.py  config.py  exporters.py  factory.py  orchestrator.py  schemas.py  sources.py  timing.py  vllm_server.py
extraction/extractors/: __init__.py  base.py  guided_json.py  langextract_backend.py
extraction/parsers/: __init__.py  base.py  mineru.py
harvester/: arxiv_hf_scraper.py  config.py  downloader.py  hf_papers_scraper.py  pipeline.py  scraper.py
outputs/: papers.jsonl
scripts/: serve_extractor.sh
test/papers/: papers.jsonl  test_10.jsonl
test/survey/: papers.jsonl
